feat: 헤더 부분 추가 및 테스트코드 수정